# allure-testops-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml  publish.yml  test.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/milestones/v0.4/: v0.4-MILESTONE-AUDIT.md  v0.4-ROADMAP.md
.planning/phases/01-name-id-lookup/: CONTEXT.md  SUMMARY.md
.planning/phases/02-integration-tests/: SUMMARY.md
.planning/phases/03-version-ssot/: SUMMARY.md
.planning/phases/04-update-verb/: SUMMARY.md
.planning/phases/v05-01-list-refdata/: SUMMARY.md
.planning/phases/v06-01-get-testcase/: SUMMARY.md
.planning/phases/v07-01-custom-fields/: SUMMARY.md
.planning/phases/v08-01-cf-schema/: SUMMARY.md
.planning/reports/: MILESTONE_SUMMARY-v0.3.md
docs/superpowers/specs/: 2026-06-04-allure-write-test-cases-design.md
src/allure_testops_mcp/: __init__.py  _mcp.py  client.py  errors.py  models.py  output.py  server.py  tools.py  tools_write.py
tests/: test_client.py  test_client_write.py  test_errors.py  test_mcp_registration.py  test_pagination.py  test_tools_detail.py  test_tools_helpers.py  test_tools_refdata.py  test_tools_write.py  test_version_consistency.py
tests/integration/: test_write_live.py
